fixed conclusion tile invisiblity before results display

--- a/main.css
+++ b/main.css
@@ -96,3 +96,7 @@ button.button {
 #resultHead {
   font-size: 100%;
 }
+
+#conclusion {
+  visibility: hidden;
+}
